fixes on mobile title font size

--- a/styles/main.less
+++ b/styles/main.less
@@ -595,6 +595,10 @@ body {
     border-radius: 0 !important;;
     margin-top: 10px;
   }
+  .unknown-service {
+    background-color: #333;
+    background-color: rgba(0, 0, 0, .5);
+  }
 
 }
 
@@ -660,7 +664,7 @@ body {
     }
     #pop-title {
       padding-top:20px;
-      font-size: 30px !important;
+      font-size: 24px !important;
       margin:0 0;
     }
   }
@@ -750,9 +754,9 @@ body {
       text-align: left;
 
     }
-    #pop-title {
-      font-size: 32px !important;
-    }
+//    #pop-title {
+//
+//    }
   }
 
   .asset-title {
